--- a/starting/TheCodeCamp/TheCodeCamp.csproj
+++ b/starting/TheCodeCamp/TheCodeCamp.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\CampsController.cs" />
+    <Compile Include="Controllers\TalksController.cs" />
     <Compile Include="Data\CampContext.cs" />
     <Compile Include="Data\CampingMappingProfile.cs" />
     <Compile Include="Data\CampRepository.cs" />
@@ -196,6 +197,8 @@
     </Compile>
     <Compile Include="Data\Migrations\Configuration.cs" />
     <Compile Include="Models\CampModel.cs" />
+    <Compile Include="Models\SpeakerModel.cs" />
+    <Compile Include="Models\TalkModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -212,7 +215,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Camps\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\Views\_ViewStart.cshtml" />
